--- a/frontend_app/pubspec.yaml
+++ b/frontend_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: frontend_app
-description: "A new Flutter project."
+description: "A Microsoft To Do clone Flutter app."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -34,9 +34,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  provider: ^6.0.0 # for state management
-  http: 1.4.0 # for network requests (if needed)
-  shared_preferences: ^2.0.0 # for local storage
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
