--- a/frontend_app/pubspec.yaml
+++ b/frontend_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   provider: ^6.1.2
   shared_preferences: ^2.2.3
   uuid: ^4.4.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
