--- a/frontend_app/pubspec.yaml
+++ b/frontend_app/pubspec.yaml
@@ -1,5 +1,5 @@
 name: frontend_app
-description: "A Microsoft To Do clone Flutter app."
+description: "Microsoft To-Do Clone Flutter App"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -34,10 +34,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  provider: ^6.1.2
-  shared_preferences: ^2.2.3
-  uuid: ^4.4.0
   http: ^1.1.0
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
